--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,9 @@
 theme: jekyll-theme-hacker
 google_analytics: UA-107493720-2
+gems:
+    - jemoji
+    - jekyll-mentions
+    - jekyll-redirect-from
+    - jekyll-sitemap
+    - jekyll-feed
+    
